--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta property="og:image" content="https://texodus.github.io/nypd-ccrb/preview.png">
-    <title>NYPD Civilian Complaint Review Board Stats</title>
+    <title>NYPD CCRB Stats</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"></head>
   <body>
   <script src="index.js"></script></body>
