--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<!doctype html><html><head><meta charset="utf-8"><title>NYPD CCRB Stats</title><meta name="viewport" content="width=device-width,initial-scale=1"></head><body><script src="index.js"></script></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>NYPD CCRB Stats</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"></head>
+  <body>
+  <script src="index.js"></script></body>
+</html>
